[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/powerups/powerup_button.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/question_mark.png" type="Texture" id=2]

[node name="PowerupButton" type="Button"]
margin_right = 45.0
margin_bottom = 45.0
icon = ExtResource( 2 )
align = 0
icon_align = 1
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 2

[node name="CountLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
margin_top = 2.0
margin_right = 39.0
margin_bottom = 15.0
size_flags_vertical = 0
text = "7"
align = 2

[connection signal="gui_input" from="." to="." method="_on_PowerupButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PowerupButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PowerupButton_mouse_exited"]
